# subprocess-connection

./: MANIFEST.in  README.md  setup.cfg  subprocess_connection.py  test.py
subprocess_connection/: __init__.py
