[metadata]
name = subprocess_connection
version = 0.0.3
author = user202729
description = Communicate objects between parent process and subprocess.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/subprocess_connection
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages = subprocess_connection
include_package_data = True
